--- a/data_analysis.html
+++ b/data_analysis.html
@@ -4,6 +4,8 @@
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://d3js.org/d3-array.v1.min.js"></script>
 <script src="https://d3js.org/d3-geo.v1.min.js"></script>
+  <script src="./jquery-3.4.1.js"> </script>
+
 <script>
 	var projection = d3.geo.mercator()
 	  .scale(100000)
@@ -19,7 +21,7 @@
 		d3.csv("combined_10min.csv", function(data) {
 		    for (var i = 0; i < data.length; i++) {
 		    	time = data[i]["Timestamp"]
-		    	final.push({[time] : new Array})
+		    	newobj = {time : time}
 		    	for (var j = 0; j < features.length; j++) {
 		    		let sum = 0
 		    		let count = 0
@@ -40,10 +42,13 @@
 		    		}
 		    		let avg = sum / count;
 		    		neighborhood = features[j].properties.Nbrhood
-		    		final[i][time].push({[neighborhood] : avg})
+		    		newobj[[neighborhood]] = avg
 		    	}
-		    	console.log(final)
+		    	final.push(newobj)
 		    }
+		    console.log(final)
+		    stringified = JSON.stringify(final)
+		    $.post('http://localhost:5000/', {'final': stringified})
 		})
 	});
 
