--- a/data_analysis.html
+++ b/data_analysis.html
@@ -15,41 +15,59 @@
 
 	var path = d3.geo.path()
 	  .projection(projection);
-	var final = new Array
-	var geoJson = d3.json('StHimarkGeo.json', function(error, mapData) {
-		var features = mapData.features;
-		d3.csv("combined_10min.csv", function(data) {
-		    for (var i = 0; i < data.length; i++) {
-		    	time = data[i]["Timestamp"]
-		    	newobj = {time : time}
-		    	for (var j = 0; j < features.length; j++) {
-		    		let sum = 0
-		    		let count = 0
-		    		let bounds = path.bounds(features[j].geometry)
-		    		for (var k = 1; k < 60; k++){
-		    			point = path.centroid({
-		    						"type": "Feature",
-							  		"geometry": {
-							    		"type": "Point",
-							    		"coordinates": [data[i]["Long_"+ k], data[i]["Lat_"+ k]]
-							  		}
-								})
-		    			if ((bounds[0][1] - 20) < point[1] && (bounds[1][1] + 20) > point[1] &&
-		    				(bounds[0][0] - 20) < point[0] && (bounds[1][0] + 20) > point[0]) {
-		    				sum += parseFloat(data[i]["Value_"+ k])
-		    				count += 1
-		    			}
-		    		}
-		    		let avg = sum / count;
-		    		neighborhood = features[j].properties.Nbrhood
-		    		newobj[[neighborhood]] = avg
-		    	}
-		    	final.push(newobj)
-		    }
-		    console.log(final)
-		    stringified = JSON.stringify(final)
-		    $.post('http://localhost:5000/', {'final': stringified})
-		})
+	var final_radiation = new Array
+	var final_uncertainty = new Array
+	var uncertaintyJson = d3.json('./close.json', function(error, uncertaintyData) {
+		var geoJson = d3.json('StHimarkGeo.json', function(error, mapData) {
+			var features = mapData.features;
+			d3.csv("combined_10min.csv", function(data) {
+			    for (var i = 0; i < data.length; i++) {
+			    	time = data[i]["Timestamp"]
+			    	radiation = {time : time}
+			    	uncertainty = {time : time}
+			    	for (var j = 0; j < features.length; j++) {
+			    		let sum = 0
+			    		let count = 0
+			    		let sensor_ct = 0
+			    		let uncertainty_k = 0
+			    		let bounds = path.bounds(features[j].geometry)
+			    		for (var k = 1; k < 60; k++){
+			    			if (k == 10) {
+			    				continue
+			    			}
+			    			point = path.centroid({
+			    						"type": "Feature",
+								  		"geometry": {
+								    		"type": "Point",
+								    		"coordinates": [data[i]["Long_"+ k], data[i]["Lat_"+ k]]
+								  		}
+									})
+			    			if ((bounds[0][1] - 20) < point[1] && (bounds[1][1] + 20) > point[1] &&
+			    				(bounds[0][0] - 20) < point[0] && (bounds[1][0] + 20) > point[0]) {
+			    				sum += parseFloat(data[i]["Value_"+ k])
+			    				count += 1
+			    				sensor_ct += 1
+			    				if (k <= 50) {
+			    					uncertainty_k += uncertaintyData["Uncertainty"][k - 1]
+			    				}
+			    			}
+			    		}
+			    		let avg = sum / count;
+			    		neighborhood = features[j].properties.Nbrhood
+			    		radiation[[neighborhood]] = avg
+			    		let u_calc = (uncertainty_k / sensor_ct) / sensor_ct
+			    		uncertainty[[neighborhood]] = Math.abs(u_calc)
+			    	}
+			    	final_radiation.push(radiation)
+			    	final_uncertainty.push(uncertainty)
+			    }
+			    console.log("radiation", final_radiation)
+			    console.log("uncertainty", final_uncertainty)
+			    stringified_rad = JSON.stringify(final_radiation)
+			    stringified_uncertainty = JSON.stringify(final_uncertainty)
+			    $.post('http://localhost:5000/', {'radiation': stringified_rad, 'uncertainty': stringified_uncertainty})
+			})
+		});
 	});
 
 </script>
