--- a/map.html
+++ b/map.html
@@ -32,6 +32,20 @@ text.big-text{
   font-size: 12px;
 }
 
+path { 
+  stroke: steelblue;
+  stroke-width: 2;
+  fill: none;
+}
+ 
+.axis path,
+.axis line {
+  fill: none;
+  stroke: grey;
+  stroke-width: 1;
+  shape-rendering: crispEdges;
+}
+
 </style>
 <body>
 
@@ -43,7 +57,8 @@ text.big-text{
 <form>
   <input type="checkbox"  onclick="changeUncertainty()"> Uncertainty <br>
 </form>
-<div id="scatter_graph"></div>
+<div id="side_graphs"></div>
+
 
 <svg></svg>
 
@@ -425,8 +440,8 @@ function textArt(text){
 
 <script>
   var margin = {top: 20, right: 20, bottom: 30, left: 40},
-    width = 960 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
+    width = 600 - margin.left - margin.right,
+    height = 270 - margin.top - margin.bottom;
 
 var x = d3.scale.linear()
     .range([0, width]);
@@ -436,7 +451,7 @@ var y = d3.scale.linear()
 
 var z = d3.scale.category10();
 
-var svg = d3.select("#scatter_graph").append("svg")
+var svg = d3.select("#side_graphs").append("svg")
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
   .append("g")
@@ -486,4 +501,72 @@ d3.csv("testscatter.csv", function(error, data) {
       .attr("cx", function(d) { return x(d.x); })
       .attr("cy", function(d) { return y(d.y); });
 });
+</script>
+
+
+<!-- Mobile Average Line Graph -->
+<script>
+ 
+// Set the dimensions of the canvas / graph
+var margin = {top: 30, right: 20, bottom: 30, left: 50},
+  width = 600 - margin.left - margin.right,
+  height = 270 - margin.top - margin.bottom;
+ 
+// Parse the date / time
+// var  parseDate = d3.time.format("%Y-%m-%dT%H:%M:%SZ").parse;
+ 
+// Set the ranges
+var x = d3.time.scale().range([0, width]);
+var y = d3.scale.linear().range([height, 0]);
+ 
+// Define the axes
+var xAxis = d3.svg.axis().scale(x)
+  .orient("bottom").ticks(5);
+ 
+var yAxis = d3.svg.axis().scale(y)
+  .orient("left").ticks(5);
+ 
+// Define the line
+var valueline = d3.svg.line()
+  .x(function(d) { return x(d.timestamp); })
+  .y(function(d) { return y(d.Average); });
+    
+// Adds the svg canvas
+var mobileline = d3.select("#side_graphs")
+  .append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+ 
+// Get the data
+d3.csv("mobileaverage.csv", function(error, data) {
+  data.forEach(function(d) {
+    d.timestamp = new Date(d.timestamp);
+    console.log(d.timestamp);
+    d.Average = +d.Average;
+  });
+ 
+  // Scale the range of the data
+  x.domain(d3.extent(data, function(d) { return d.timestamp; }));
+  y.domain([0, d3.max(data, function(d) { return d.Average; })]);
+ 
+  // Add the valueline path.
+  mobileline.append("path")  
+    .attr("class", "line")
+    .attr("d", valueline(data));
+ 
+  // Add the X Axis
+  mobileline.append("g")   
+    .attr("class", "x axis")
+    .attr("transform", "translate(0," + height + ")")
+    .call(xAxis);
+ 
+  // Add the Y Axis
+  mobileline.append("g")   
+    .attr("class", "y axis")
+    .call(yAxis);
+ 
+});
+ 
 </script>
