--- a/map.html
+++ b/map.html
@@ -570,3 +570,70 @@ d3.csv("mobileaverage.csv", function(error, data) {
 });
  
 </script>
+
+<!-- Static Average Line Graph -->
+<script>
+ 
+// Set the dimensions of the canvas / graph
+var margin = {top: 30, right: 20, bottom: 30, left: 50},
+  width = 600 - margin.left - margin.right,
+  height = 270 - margin.top - margin.bottom;
+ 
+// Parse the date / time
+// var  parseDate = d3.time.format("%Y-%m-%dT%H:%M:%SZ").parse;
+ 
+// Set the ranges
+var x = d3.time.scale().range([0, width]);
+var y = d3.scale.linear().range([height, 0]);
+ 
+// Define the axes
+var xAxis = d3.svg.axis().scale(x)
+  .orient("bottom").ticks(5);
+ 
+var yAxis = d3.svg.axis().scale(y)
+  .orient("left").ticks(5);
+ 
+// Define the line
+var valueline = d3.svg.line()
+  .x(function(d) { return x(d.timestamp); })
+  .y(function(d) { return y(d.Average); });
+    
+// Adds the svg canvas
+var staticline = d3.select("#side_graphs")
+  .append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+ 
+// Get the data
+d3.csv("staticaverage.csv", function(error, data) {
+  data.forEach(function(d) {
+    d.timestamp = new Date(d.timestamp);
+    console.log(d.timestamp);
+    d.Average = +d.Average;
+  });
+ 
+  // Scale the range of the data
+  x.domain(d3.extent(data, function(d) { return d.timestamp; }));
+  y.domain([0, d3.max(data, function(d) { return d.Average; })]);
+ 
+  // Add the valueline path.
+  staticline.append("path")  
+    .attr("class", "line")
+    .attr("d", valueline(data));
+ 
+  // Add the X Axis
+  staticline.append("g")   
+    .attr("class", "x axis")
+    .attr("transform", "translate(0," + height + ")")
+    .call(xAxis);
+ 
+  // Add the Y Axis
+  staticline.append("g")   
+    .attr("class", "y axis")
+    .call(yAxis);
+ 
+});
+ 
+</script>
