--- a/map.html
+++ b/map.html
@@ -67,13 +67,17 @@ path {
 
 <script>
 
+var totalUncertainty = []
+var totalRadiation = []
+var totalPosition = []
+
 var slider = document.getElementById("myRange");
 var output = document.getElementById("demo");
 output.innerHTML = slider.value; // Display the default slider value
 
 // Update the current slider value (each time you drag the slider handle)
 slider.oninput = function() {
-  output.innerHTML = this.value;
+  output.innerHTML = totalRadiation[this.value]['time'];
   time = this.value
   updateData(this.value)
 }
@@ -129,10 +133,6 @@ var bigText = g.append('text')
 
 var globalData = {}
 var globalUncertainty = {}
-
-var totalUncertainty = []
-var totalRadiation = []
-var totalPosition = []
 
 var time = 0
 
