--- a/map.html
+++ b/map.html
@@ -232,12 +232,27 @@ var uncertaintyText = g.append('text')
   .attr('x', 20)
   .attr('y', 85)
 
-var tooltip = g.append('text')
+var tooltipRect = g.append('rect')
+  .attr('fill', 'white')
+  .attr('opacity', 0)
+  .attr('width', '145px')
+  .attr('height', '60px')
+
+var tooltip1 = g.append('text')
+  .attr('x', 0)
+  .attr('y', 0)
+
+var tooltip2 = g.append('text')
+  .attr('x', 0)
+  .attr('y', 0)
+
+var tooltip3 = g.append('text')
   .attr('x', 0)
   .attr('y', 0)
 
 var globalData = {}
 var globalUncertainty = {}
+var globalPosition = {}
 
 var currMouseover = null
 
@@ -282,6 +297,7 @@ function rawValuesFromData(entireData, mapData) {
 function drawMap(data, uncertaintyData, positionData, totalRadiation) {
   globalData = data
   globalUncertainty = uncertaintyData
+  globalPosition = positionData
   var geoJson = d3.json('StHimarkGeo.json', function(error, mapData) {
 
     var features = mapData.features;
@@ -318,7 +334,8 @@ function drawMap(data, uncertaintyData, positionData, totalRadiation) {
         .attr("cy", d => positionData[d]['point'][1])
         .attr("r", "4px")
         .attr("fill", d => positionData[d]['type'] == 'mobile' ? "yellow" : "blue")
-        .on("mouseover", d => console.log(d))//sensorTooltip(d))
+        .on("mouseover", d => sensorTooltip(d))
+        .on("mouseout", d => tooltipOut(d))
     }
   });
 }
@@ -336,6 +353,7 @@ function updateData(time) {
 function updateMap(data, uncertaintyData, positionData){
   globalData = data
   globalUncertainty = uncertaintyData
+  globalPosition = positionData
   var geoJson = d3.json('StHimarkGeo.json', function(error, mapData) {
     var features = mapData.features; 
 
@@ -356,6 +374,8 @@ function updateMap(data, uncertaintyData, positionData){
         .attr("cy", function(d){return positionData[d]['point'][1]})
         .attr("r", "4px")
         .attr("fill", function(d){return positionData[d]['type'] == 'mobile' ? "yellow" : "blue"})
+        .on("mouseover", d => sensorTooltip(d))
+        .on("mouseout", d => tooltipOut(d))
     }
 }
 
@@ -415,6 +435,15 @@ d3.selection.prototype.moveToFront = function() {
   });
 };
 
+d3.selection.prototype.moveToBack = function() {
+    return this.each(function() {
+        var firstChild = this.parentNode.firstChild;
+        if (firstChild) {
+            this.parentNode.insertBefore(this, firstChild);
+        }
+    });
+};
+
 function mouseover(d){
   // Highlight hovered province
   //d3.select(this).style('fill', 'orange');
@@ -427,7 +456,7 @@ function mouseover(d){
   textArt(currMouseover);
   displayData(currMouseover);
   updateData(globalTime)
-  d3.select(this).moveToBack();
+  mapLayer.selectAll("circle").moveToFront()
 
 }
 
@@ -443,6 +472,7 @@ function mouseout(d){
   bigText.text('');
   radiationText.text('');
   uncertaintyText.text('');
+  d3.select(this).moveToBack();
 }
 
 
@@ -476,13 +506,37 @@ var FONTS = [
 ];
 
 function sensorTooltip(d) {
-  console.log("yee")
-  tooltip
-    .attr("x", d.position[0])
-    .attr("y", d.position[1])
-    .text("hello!")
+  tooltip1
+    .attr("x", globalPosition[d].point[0])
+    .attr("y", globalPosition[d].point[1] - 45 )
+    .text("Sensor Id: " + globalPosition[d].id)
 
-  console.log("hello")
+  tooltip2
+    .attr("x", globalPosition[d].point[0])
+    .attr("y", globalPosition[d].point[1] - 25)
+    .text("Sensor type: " + globalPosition[d].type)
+
+  uncertaintyFloat = Math.round(globalPosition[d].uncertainty * 1000) / 1000
+
+  tooltip3
+    .attr("x", globalPosition[d].point[0])
+    .attr("y", globalPosition[d].point[1] - 5)
+    .text("Uncertainty: " + uncertaintyFloat)
+
+  tooltipRect
+    .attr("x", globalPosition[d].point[0])
+    .attr("y", globalPosition[d].point[1] - 60)
+    .attr("opacity", 1)
+
+}
+
+function tooltipOut(d) {
+  tooltip1.text('')
+  tooltip2.text('')
+  tooltip3.text('')
+
+  tooltipRect
+    .attr("opacity", 0)
 }
 
 function textArt(text){
